--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,1 @@
-defaults:
-  -
-    scope:
-      path: "" # an empty string here means all files in the project
-      type: "pages"
-    values:
-      layout: "site"
+theme: jekyll-theme-kacker
