--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,9 @@
 theme: jekyll-theme-minimal
 
-title: Wei's GitHUb
+title: Wei's technical notes
 author: Wei Wang
-
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: Learn cutting-Edge technologies
+logo: /assets/imgs/Wei_Emoji.gif
 
 # social links
 twitter_username: givemepower8
