minor issue fixes

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ theme: jekyll-theme-minimal
 
 title: Wei's technical notes
 author: Wei Wang
-description: Learn cutting-Edge technologies
+description: Learn cutting-edge technologies with me
 logo: /assets/imgs/Wei_Emoji.gif
 
 # social links
