--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ title: Wei's technical notes
 author: Wei Wang
 description: Learn cutting-edge technologies with me
 logo: /assets/imgs/Wei_Emoji.gif
+excerpt_separator: <!--more-->
 
 # social links
 twitter_username: givemepower8
