--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ theme: jekyll-theme-minimal
 title: Wei's technical notes
 author: Wei Wang
 description: Learn cutting-edge technologies with me
-logo: /assets/imgs/Wei_Emoji.gif
+logo: /assets/img/Wei_Emoji.gif
 excerpt_separator: <!--more-->
 
 # social links
