--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 title: Wei's technical notes
+heading: Wei
+sub_heading: Learn cutting-edge technologies with me
 author: Wei Wang
 description: Learn cutting-edge technologies with me
-logo: /assets/img/Wei_Emoji.gif
 excerpt_separator: <!--more-->
 
 # social links
