--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,6 @@
 title: Wei's technical notes
-heading: Wei
-sub_heading: Learn cutting-edge technologies with me
 author: Wei Wang
-description: Learn cutting-edge technologies with me
+description: Learn cutting-edge technologies with Wei
 excerpt_separator: <!--more-->
 
 permalink: /:categories/:title/
