--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,17 @@
 {
     "cSpell.words": [
+        "chaijs",
         "crossorigin",
+        "deserialize",
         "devdocs",
         "expressjs",
+        "gitignore",
         "gulpfile",
+        "hotfix",
         "imgs",
         "linq",
         "mern",
+        "mingw",
         "minification",
         "mjavascript",
         "namespacing",
@@ -17,7 +22,9 @@
         "polyfills",
         "preprocessors",
         "readline",
+        "reddit",
         "replyto",
+        "sinonjs",
         "templating",
         "transpilation",
         "transpiled",
