--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "crossorigin",
         "deserialize",
         "devdocs",
+        "divs",
         "expressjs",
         "gitignore",
         "gulpfile",
@@ -13,6 +14,7 @@
         "iife",
         "imgs",
         "invokation",
+        "lifecycle",
         "linq",
         "mern",
         "mingw",
