--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,7 @@
         "namespacing",
         "nextjs",
         "pageview",
+        "paginator",
         "pluggable",
         "pluralsight",
         "polyfill",
