--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "divs",
         "expressjs",
         "formik",
+        "gingerstudio",
         "gitignore",
         "gulpfile",
         "hotfix",
