--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,7 +31,9 @@
         "pluralsight",
         "polyfill",
         "polyfills",
+        "precommit",
         "preprocessors",
+        "prettierrc",
         "reactjs",
         "readline",
         "reddit",
