--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,6 +40,8 @@
         "reddit",
         "replyto",
         "sinonjs",
+        "stateful",
+        "tabindex",
         "templating",
         "transpilation",
         "transpiled",
