--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-highlighter: rogue
+highlighter: rouge
 title: Wei's technical notes
 author: Wei Wang
 description: Learn cutting-edge technologies with Wei
