--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
         "iife",
         "imgs",
         "invokation",
+        "jsdelivr",
         "lifecycle",
         "linq",
         "mern",
