--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,6 +42,7 @@
         "replyto",
         "sinonjs",
         "stateful",
+        "stringify",
         "tabindex",
         "templating",
         "transpilation",
