--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,5 +59,6 @@
         "withchildren",
         "zakas"
     ],
-    "editor.formatOnSave": true
+    "editor.formatOnSave": true,
+    "html.format.enable": false
 }
